<resources>
    <string name="app_name">Blueberry</string>

    <!-- TODO: Remove or change this placeholder text : for Hye_Been-->
    <string name="take_picture">take picture</string>
    <string name="request_camera_permission">This App needs camera permission.</string>
    <string name="request_writeExternalStorage_permission">This App needs write_external_storage permission.</string>
    <string name="camera_error">camera error</string>
    <string name="gallery_error">gallery error</string>

    <!-- TODO: Remove or change this placeholder text : for Han_Su -->
    <string name="permission_1">[설정] > [권한] 에서 권한을 허용할 수 있습니다.</string>
    <string name="permission_2">사진 및 파일을 저장하기 위하여 접근 권한이 필요합니다.</string>

    <string name="success_login">로그인 성공</string>
    <string name="failed_login">로그인 실패</string>

    <string name="title_activity_option">OptionActivity</string>
    <string name="title_list">List</string>
    <string name="title_camera">Camera</string>
    <string name="title_group">Group</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_option">Option</string>

    <string name="hint_search">검색</string>
    <string name="button_search">Search</string>
    <string name="button_backup">Backup</string>
    <string name="button_restore">Restore</string>
    <string name="button_signOut">SignOut</string>
    <string name="switch1">주소록 자동 저장</string>
    <string name="information"><b>BlueBerry</b> ver1.0\n\nMade by <b>CheeseCake</b>\n<b>소혜빈</b>\tshb0328\n<b>배유진</b>\tzzarbttoo\n<b>김한수</b>\tcpuman7\n"</string>

    <!-- TODO: Remove or change this placeholder text : for U_JIN -->
    <string name="title_activity_re_check">reCheck</string>
    <string name="action_settings">Settings</string>
    <string name="recheck_title">인적사항 선택</string>
    <string name="recheck_guiding">정확한 인적사항을 탭하여 선택해주세요\n없다면 다음 장에서 직접 수정이 가능하니 해당 없음을 선택하세요</string>
    <string name="recheck_name">이름을 선택하세요</string>
    <string name="recheck_phone">전화번호를 선택하세요</string>
    <string name="recheck_company">회사를 선택하세요</string>
    <string name="recheck_email">이메일을 선택하세요</string>
    <string name="recheck_next">Save</string>
    <string name="imageFile">image</string>
    <string name="recheck2_title">인적사항 수정</string>
    <string name="recheck2_guiding">올바른 인적사항을 입력해주세요\n주소록 자동 저장 설정을 했을 경우 SAVE 버튼을 통해 주소록으로 넘어갑니다</string>
    <string name="recheck2_name2">이름을 확인하시오</string>
    <string name="recheck2_phone2">전화번호를 확인하시오</string>
    <string name="recheck2_mail2">메일주소를 확인하시오</string>
    <string name="recheck2_company2">회사명을 확인하시오</string>
    <string name="recheck2_toPhone">SAVE</string>

    <string name="dialog_exit_title">종료</string>
    <string name="dialog_exit_question">종료하시겠습니까?</string>
    <string name="dialog_exit_yes">예</string>
    <string name="dialog_exit_no">아니오</string>

    <string name="defaultGroupString">"None"</string>


    <string-array name="recheck_name">
        <item>이름1</item>
        <item>이름2</item>
        <item>해당없음</item>
    </string-array>

    <string-array name="recheck_phone">
        <item>전화1</item>
        <item>해당없음</item>
    </string-array>

    <string-array name="recheck_company">
        <item>회사1</item>
        <item>해당없음</item>
    </string-array>

    <string-array name="recheck_address">
        <item>이메일1</item>
        <item>해당없음</item>
    </string-array>

    <string-array name="recheck_group">
        <item>그룹1</item>
        <item>그룹을 추가하세요</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_crop"><b>이름</b> 영역을 <b>색칠</b>한 후 <b>언어</b>를 <b>선택</b>해주세요.</string>

</resources>
