<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/fragment_list">

    <fragment
        android:id="@+id/fragment_list"
        android:name="ssu.cheesecake.blueberry.menu.ListFragment"
        android:label="@string/title_list"
        tools:layout="@layout/fragment_list" />
    <fragment
        android:id="@+id/fragment_group"
        android:name="ssu.cheesecake.blueberry.menu.GroupFragment"
        android:label="@string/title_group"
        tools:layout="@layout/fragment_group" />
    <fragment
        android:id="@+id/fragment_favorite"
        android:name="ssu.cheesecake.blueberry.menu.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite" />
    <fragment
        android:id="@+id/fragment_option"
        android:name="ssu.cheesecake.blueberry.menu.OptionFragment"
        android:label="@string/title_option"
        tools:layout="@layout/fragment_option" />
</navigation>