<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/LayoutStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layout_backup"
        style="@style/LayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/layout_restore"
        android:orientation="horizontal">

        <TextView
            style="@style/TextViewStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3" />

        <Button
            android:id="@+id/button_backup"
            style="@style/IconButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="@string/button_backup"
            app:icon="@drawable/button_icon_backup"
            app:iconSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_restore"
        style="@style/LayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/layout_signOut"
        android:orientation="horizontal">

        <TextView
            style="@style/TextViewStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3" />

        <Button
            android:id="@+id/button_restore"
            style="@style/IconButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="@string/button_restore"
            app:icon="@drawable/button_icon_restore"
            app:iconSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_signOut"
        style="@style/LayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/auto_save"
        android:orientation="horizontal">

        <TextView
            style="@style/TextViewStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3" />

        <Button
            android:id="@+id/button_signOut"
            style="@style/IconButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="@string/button_signOut"
            app:icon="@drawable/button_icon_signout"
            app:iconSize="20dp" />
    </LinearLayout>

    <Switch
        android:id="@+id/auto_save"
        style="@style/TextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="0dp"
        android:text="@string/switch1" />

    <TextView
        android:id="@+id/textView"
        style="@style/TextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/information" />

</RelativeLayout>