<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBlueBerry1"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="@dimen/activity_recheck_title_horizontal"
        android:layout_marginRight="@dimen/activity_recheck_title_horizontal"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nanumsquare"
            android:text="@string/recheck2_title"
            android:textSize="25sp"
            android:textColor="@color/colorWhite"
            android:layout_marginStart="5dp"
            />

        <View
            android:background="@color/colorWhite"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:layout_marginTop="5dp"
            android:textColor="@color/colorWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recheck2_guiding"
            android:textSize="11sp"
            android:layout_marginStart="5dp"
            />



    </LinearLayout>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:baselineAligned="true"
        android:gravity="top|center_horizontal"
        android:orientation="horizontal"
        android:paddingTop="8dp">

        <ImageView
            android:id="@+id/business_card"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:background="@drawable/borderimage"
            android:adjustViewBounds="true"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/borderselection"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:baselineAligned="true"
            android:orientation="horizontal">



            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:baselineAligned="true"
                android:orientation="vertical">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recheck_name"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/recheck1_question1"
                android:layout_margin="@dimen/activity_recheck12_selectionMargin"

                />

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/recheck_name"
                />
            </LinearLayout>


            <EditText
                android:id="@+id/name_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="textCapWords"
                android:textSize="@dimen/recheck2_question1"
                android:hint="선택한 이름 수정"
                />

</LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:baselineAligned="true"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:baselineAligned="true"
                android:orientation="vertical">
        <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recheck_phone"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/recheck1_question1"
                android:layout_margin="@dimen/activity_recheck12_selectionMargin"
                />

            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/recheck_phone"
                />
            </LinearLayout>

            <EditText
                android:id="@+id/phone_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:textSize="@dimen/recheck2_question1"
                android:hint="선택한 번호 수정"
               />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:baselineAligned="true"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:baselineAligned="true"
                android:orientation="vertical">

        <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recheck_company"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/recheck1_question1"
                android:layout_margin="@dimen/activity_recheck12_selectionMargin"
                />


            <Spinner
                android:id="@+id/spinner3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/recheck_company"
                />

            </LinearLayout>

            <EditText
                android:id="@+id/company_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="textCapWords"
                android:textSize="@dimen/recheck2_question1"
                android:hint="선택한 회사 수정"
                />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:baselineAligned="true"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:baselineAligned="true"
                android:orientation="vertical">

        <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recheck_email"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/recheck1_question1"
                android:layout_margin="@dimen/activity_recheck12_selectionMargin"
                />

            <Spinner
                android:id="@+id/spinner4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/recheck_address"
                />

            </LinearLayout>


            <EditText
                android:id="@+id/mail_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/recheck2_question1"
                android:hint="선택한 이메일 수정"
                 />

</LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/recheck1_margin">

        <Button
            android:id="@+id/finishButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recheck_next"
            android:textSize="@dimen/recheck1_question1"
            />


    </LinearLayout>


</LinearLayout>
