<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlueBerry1"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/activity_recheck_title_horizontal"
        android:layout_marginTop="40dp"
        android:layout_marginRight="@dimen/activity_recheck_title_horizontal"
        android:layout_weight="0.7"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/nanumsquare"
            android:text="@string/recheck2_title"
            android:textColor="@color/colorWhite"
            android:textSize="25sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/recheck2_guiding"
            android:textColor="@color/colorWhite"
            android:textSize="11sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorWhite" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:baselineAligned="true"
        android:gravity="top|center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/business_card"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:adjustViewBounds="true"
            android:background="@drawable/borderimage" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:layout_weight="2"
        android:background="@drawable/borderselection"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:baselineAligned="true"
            android:orientation="vertical">


            <ssu.cheesecake.blueberry.EditSpinner
                android:id="@+id/edit_name"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:hint="이름을 선택한 후 수정하세요"
                android:textColorHint="@color/colorWhite"
                android:textSize="@dimen/recheck1_question1"
                android:fontFamily="@font/nanumsquare"
                android:padding="8dp"
                app:dropDownDrawable="@drawable/picker"
                app:dropDownDrawableSpacing="15dp"
                app:dropDownDrawableWidth="25dp"
                app:dropDownDrawableHeight="25dp"
                app:dropDownAnimStyle="@style/CustomPopupAnimation"
                />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:baselineAligned="true"
            android:orientation="vertical">



            <ssu.cheesecake.blueberry.EditSpinner
                android:id="@+id/edit_phone"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:hint="휴대전화 번호를 입력하고 수정하세요"
                android:textColorHint="@color/colorWhite"
                android:textSize="@dimen/recheck1_question1"
                android:fontFamily="@font/nanumsquare"
                android:padding="8dp"
                app:dropDownDrawable="@drawable/picker"
                app:dropDownDrawableSpacing="15dp"
                app:dropDownDrawableWidth="25dp"
                app:dropDownDrawableHeight="25dp"
                app:dropDownAnimStyle="@style/CustomPopupAnimation"
                />



        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:baselineAligned="true"
            android:orientation="vertical">


            <ssu.cheesecake.blueberry.EditSpinner
                android:id="@+id/edit_company"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:hint="회사 이름을 선택하고 수정하세요"
                android:textColorHint="@color/colorWhite"
                android:textSize="@dimen/recheck1_question1"
                android:fontFamily="@font/nanumsquare"
                android:padding="8dp"
                app:dropDownDrawable="@drawable/picker"
                app:dropDownDrawableSpacing="15dp"
                app:dropDownDrawableWidth="25dp"
                app:dropDownDrawableHeight="25dp"
                app:dropDownAnimStyle="@style/CustomPopupAnimation"
                />




        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:baselineAligned="true"
            android:orientation="vertical">

            <ssu.cheesecake.blueberry.EditSpinner
                android:id="@+id/edit_address"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:hint="이메일 주소를 입력하고 수정하세요"
                android:textColorHint="@color/colorWhite"
                android:textSize="@dimen/recheck1_question1"
                android:fontFamily="@font/nanumsquare"
                android:padding="8dp"
                app:dropDownDrawable="@drawable/picker"
                app:dropDownDrawableSpacing="15dp"
                app:dropDownDrawableWidth="25dp"
                app:dropDownDrawableHeight="25dp"
                app:dropDownAnimStyle="@style/CustomPopupAnimation"
                />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_margin="@dimen/recheck1_margin"
        android:layout_weight="0.5">

        <Button
            android:id="@+id/finishButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recheck_next"
            android:textSize="@dimen/recheck1_question1" />


    </LinearLayout>


</LinearLayout>
